[moin/boxyellow]: fix a couple of minor css bugs:
  1. fix list items so if a para we don't suddenly get a top margin.
  2. change line height for headings so that when they wrap it doesn't look bad.

--- a/okfn.org/moin/boxyellow/css/screen.css
+++ b/okfn.org/moin/boxyellow/css/screen.css
@@ -1,8 +1,3 @@
-/*  screen.css - MoinMoin Default Styles
-
-Copyright (c) 2001, 2002, 2003 by Juergen Hermann
-*/
-
 /* content styles */
 
 /* debug 
@@ -465,11 +460,23 @@ a.nonexistent:link, a.nonexistent:visited
   color: #7f73b7;
 }
 
+a.nonexistent, a.html
+{
+  margin-top: 0;
+}
+
+
 h1,h2,h3,h4
 {
   color: #4F4786;
   margin: 1em 0 0 0;
   font-weight: normal;
+  line-height: 1.1em;
+}
+
+li > p:first-child
+{
+  margin: 0;
 }
 
 ul,ol,p,form,p,blockquote,fieldset,input 
